<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:layout_marginHorizontal="60dp"
    android:layout_marginVertical="40dp"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/tc_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/tc_logo"
            android:contentDescription="@string/authentication_title" />

        <TextView
            android:id="@+id/authentication_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/authentication_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/authentication_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/authentication_subtitle"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/user_name_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/user_name_input_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textColor="@color/appColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/private_key_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/private_key_input_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/private_key_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textColor="@color/appColor"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_form"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="@string/submit_form"
            android:onClick="onClick"/>

    </LinearLayout>





</RelativeLayout>