<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <SurfaceView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/surfaceView"
      />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textViewLive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="8dp"
          android:background="@drawable/live_display_circle"
          android:text="@string/live"
          android:textColor="#FFFFFF"
          android:textStyle="bold" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:background="@drawable/view_count_display_circle"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewViewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewEye"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_view" />
      </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/b_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentRight="true"
        android:background="#000080"
        android:text="@string/stop_stream"
        android:onClick="onClick"/>

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginVertical="5dp"
          android:layout_marginHorizontal="10dp"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <ImageView
              android:id="@+id/imageViewPFP"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="10dp"
              app:srcCompat="@drawable/pfp" />

          <TextView
              android:id="@+id/messageName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="Jefke"
              android:textColor="#3E3E3E"
              android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hoi, dit is een berichtje"
            android:textColor="#3E3E3E" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginVertical="5dp"
          android:layout_marginHorizontal="10dp"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <ImageView
              android:id="@+id/imageViewPFP2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="10dp"
              app:srcCompat="@drawable/pfp" />

          <TextView
              android:id="@+id/textViewName2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="Kees"
              android:textColor="#3E3E3E"
              android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gaaf joh"
            android:textColor="#3E3E3E" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginVertical="5dp"
          android:layout_marginHorizontal="10dp"
          android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <ImageView
              android:id="@+id/imageViewPFP3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="10dp"
              app:srcCompat="@drawable/pfp" />

          <TextView
              android:id="@+id/textViewName3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="Jefke"
              android:textColor="#3E3E3E"
              android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewMessage3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Da wit ik wel"
            android:textColor="#3E3E3E" />
      </LinearLayout>
    </LinearLayout>
  </RelativeLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_alignParentBottom="true"
      android:layout_margin="20dp"
      android:gravity="center"
      >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/editTextComment"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/chat_circle"
          android:ems="10"
          android:hint="@string/comment_placeholder"
          android:inputType="textAutoCorrect"
          android:textColor="#3E3E3E" />

      <ImageButton
          android:id="@+id/imageButtonSend"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@color/white"
          app:srcCompat="@android:drawable/ic_menu_send" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:onClick="onClick"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

  </LinearLayout>
</RelativeLayout>
